Fix image display for Netlify deployment
- Copy images from root to public directory during build
- Update HTML to reference images directly (no /images path)
- Update build command to include image copying
- Maintain backward compatibility for local development
- Update documentation with new build process

--- a/nodejs-app/public/index.html
+++ b/nodejs-app/public/index.html
@@ -671,7 +671,7 @@
                         <p>From the hearty stews of the south to the fresh ceviches of the north, Chilean cuisine tells the story of a nation shaped by geography, climate, and cultural exchange. Experience the incredible diversity of flavors, from the smoky barbecues of the countryside to the sophisticated urban dining scenes of Santiago and Valparaíso, as we explore the culinary treasures that make Chilean food culture so distinctive and celebrated worldwide.</p>
                     </div>
                     <div class="welcome-image">
-                        <img src="/images/empanadas.png" alt="Traditional Chilean Empanadas">
+                        <img src="empanadas.png" alt="Traditional Chilean Empanadas">
                         <p class="image-caption">Traditional Chilean Empanadas - A beloved pastry filled with seasoned ingredients</p>
                     </div>
                 </div>
@@ -794,7 +794,7 @@
                 <h2>Featured Chilean Recipes</h2>
                 <div class="recipe-grid">
                     <div class="recipe-card">
-                        <img src="/images/empanadaspino.png" alt="Empanadas de Pino" class="recipe-card-image">
+                        <img src="empanadaspino.png" alt="Empanadas de Pino" class="recipe-card-image">
                         <div class="recipe-card-content">
                             <h4>Empanadas de Pino</h4>
                             <p>Traditional Chilean pastries filled with seasoned ground beef, onions, hard-boiled eggs, black olives, and raisins. These golden pastries are perfect for any occasion.</p>
@@ -803,7 +803,7 @@
                     </div>
                     
                     <div class="recipe-card">
-                        <img src="/images/pasteldechoclo.png" alt="Pastel de Choclo" class="recipe-card-image">
+                        <img src="pasteldechoclo.png" alt="Pastel de Choclo" class="recipe-card-image">
                         <div class="recipe-card-content">
                             <h4>Pastel de Choclo</h4>
                             <p>A beloved corn casserole featuring layers of seasoned ground meat, chicken, hard-boiled eggs, and olives, topped with creamy corn mixture and baked to perfection.</p>
@@ -812,7 +812,7 @@
                     </div>
                     
                     <div class="recipe-card">
-                        <img src="/images/cazuela.png" alt="Cazuela" class="recipe-card-image">
+                        <img src="cazuela.png" alt="Cazuela" class="recipe-card-image">
                         <div class="recipe-card-content">
                             <h4>Cazuela</h4>
                             <p>A traditional Chilean stew with meat, vegetables, and potatoes, slow-cooked to perfection. This hearty dish represents the comfort food of Chilean home cooking.</p>
